submitting a form targetting an iframe results in window changing from background to foreground
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox87 | --- | wontfix |
| firefox88 | --- | verified |
| firefox89 | --- | verified |
People
(Reporter: gerrit.schulz83, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
1.48 KB,
application/x-zip-compressed
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
We have a page ("main page") that contains a form and an iframe. The main page submits said form periodically targetting the iframe.
Actual results:
If the main page is in the background while a different window has the focus the main page changes from background to foreground as soon as the main page submits its form.
Expected results:
The main page should stay in the background. This was the behavior of Firfox before version 86 and still is the behavior in other browsers like Chrome and Edge.
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
Comment on attachment 9211430 [details]
ZIP archive containing html-Files for reproducing the problem.
To reproduce the problem unzip the archive "example_pages.zip" and open the page_background.html file. Then click the button to open a new page in the foreground. After 10 seconds the page in the background submits it's form targetting the iframe and its window changes from background to foreground.
Comment 2•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::DOM: Core & HTML' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 3•5 years ago
|
||
Sounds like a regression of 87. We need to know which bug fix caused this.
Comment 4•5 years ago
|
||
Is this possibly related to all the changes around bug 1694927
Comment 5•5 years ago
|
||
27:28.26 INFO: Last good revision: 57c02aedb3c8f5c2126e5b739f11cbf0e30d134e
27:28.26 INFO: First bad revision: d3539dfe1b07c4937e084844999c515475e869bb
27:28.26 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=57c02aedb3c8f5c2126e5b739f11cbf0e30d134e&tochange=d3539dfe1b07c4937e084844999c515475e869bb
Updated•5 years ago
|
Updated•5 years ago
|
Comment 6•5 years ago
|
||
The component has been changed since the backlog priority was decided, so we're resetting it.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
I put up an slightly more complex test-case here... I'm not sure all the chrome heuristics make sense...
| Assignee | ||
Comment 8•5 years ago
|
||
The other navigation that allows focus moves (window.open) already goes
through the popup blocker, so that one is fine.
I think given how weird yet conservative other browsers are, this should
be a good trade-off to avoid false positives.
If you agree with this I'll add a test for the form submission bits.
| Assignee | ||
Updated•5 years ago
|
Comment 10•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 11•5 years ago
|
||
Comment on attachment 9212408 [details]
Bug 1700871 - Only allow focus move for links / form submission iff actually handling user input. r=smaug
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Makes us focus-steal less, behavior is be closer to that of other browsers.
- String changes made/needed: none
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 12•5 years ago
|
||
Comment on attachment 9212408 [details]
Bug 1700871 - Only allow focus move for links / form submission iff actually handling user input. r=smaug
Approved for 88.0b6.
Comment 13•5 years ago
|
||
| bugherder uplift | ||
Comment 14•5 years ago
|
||
Comment 15•5 years ago
|
||
| bugherder uplift | ||
Comment 16•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 17•5 years ago
|
||
I have reproduced this issue using Firefox 89.0a1 (2012.03.25) on Win 8.1 x64 and Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox 89.0a1 (latest nightly) and 88.0b6 on Win 10 x64, macOS 11.2 and Ubuntu 20.04 x64.
Description
•